# powerset-agents-core

./: README.md  pyproject.toml  test_factory.py
examples/: README.md  run_metastack_completion.py  run_metastack_hermes.py  run_payloaddiscovery_completion.py
src/metastack_powerset_agent/: __init__.py  agent.py  cli.py
src/payloaddiscovery_powerset_agent/: __init__.py  agent.py  cli.py
src/powerset_agents_core/: __init__.py  config.py  factory.py
