[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerset-agents-core"
version = "0.1.0"
description = "Core factory for creating self-improving BaseHeavenAgent instances that learn libraries through PayloadDiscovery"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "HEAVEN Framework", email = "noreply@heaven.framework"}
]
license = {text = "MIT"}
keywords = ["agents", "heaven", "payload-discovery", "starlog", "self-improvement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "heaven-framework",
    "starlog-mcp", 
    "payload-discovery",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/sancovp/powerset-agents-core"
Repository = "https://github.com/sancovp/powerset-agents-core.git"
Issues = "https://github.com/sancovp/powerset-agents-core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true